// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources with Region as CFN output 1`] = `
Object {
  "aws_project_region": "eu-west-2",
  "geo": Object {
    "amazon_location_service": Object {
      "geofenceCollections": Object {
        "default": "defaultCollection12345",
        "items": Array [
          "collection12345",
          "defaultCollection12345",
        ],
      },
      "maps": Object {
        "default": "defaultMap12345",
        "items": Object {
          "defaultMap12345": Object {
            "style": "VectorEsriStreets",
          },
          "map12345": Object {
            "style": "VectorEsriStreets",
          },
        },
      },
      "region": "eu-west-1",
      "search_indices": Object {
        "default": "defaultIndex12345",
        "items": Array [
          "index12345",
          "defaultIndex12345",
        ],
      },
    },
  },
}
`;

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources without Region CFN output 1`] = `
Object {
  "aws_project_region": "us-west-2",
  "geo": Object {
    "amazon_location_service": Object {
      "geofenceCollections": Object {
        "default": "defaultCollection12345",
        "items": Array [
          "collection12345",
          "defaultCollection12345",
        ],
      },
      "maps": Object {
        "default": "defaultMap12345",
        "items": Object {
          "defaultMap12345": Object {
            "style": "VectorEsriStreets",
          },
          "map12345": Object {
            "style": "VectorEsriStreets",
          },
        },
      },
      "region": "us-west-2",
      "search_indices": Object {
        "default": "defaultIndex12345",
        "items": Array [
          "index12345",
          "defaultIndex12345",
        ],
      },
    },
  },
}
`;
